<resources>
    <string name="app_name">SeniorProject</string>
    <string name="action_settings">Settings</string>
    <string name="saved">Saved</string>
    <string name="subscribed">Subcriptions</string>
    <string name="suggested">Suggested</string>

    <string name="open_pdf_error">Failed. No application to
        view the PDF was found on the device</string>

    <string name="subscription">Subscription</string>
    <string name="filter">Filter</string>
    <string name="searchDivider">- IN -</string>
    <string name="searchTerm">Enter a Search Term</string>
    <string name="pickColor">Choose a Color  :</string>
    <string name="customDescription">(Optional) Description</string>
    <string name="author_s">Author(s)</string>
    <string name="title">Title</string>

    <!--Values used for Filter/Subscription Creation-->
    <string-array name="filter_subscriptions">
        <item>Metadata</item>
        <item>Document Title</item>
        <item>Author(s)</item>
        <item>Publication Title</item>
        <item>Publication Year</item>
        <item>Publisher</item>
        <item>Abstract</item>
        <item>Index Terms</item>
        <item>DOI</item>
    </string-array>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="download_paper">Download Paper</string>
    <string name="intoMessage">Customized Access to Content is a bookshelf for Academic Papers.
        Your bookshelf is customized with papers you would be most likely interested in
        reading. To create this experience we need just a few papers to get the ball rolling.</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="qualifier_dialog_title">Delete Qualifier?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="customized_access_n_to_content">Customized Access  to Content</string>
    <string name="enter_a_search_term">Enter a search term...</string>
    <string name="qualifier_desc">This screen will allow you to create a specific Subscription or Filter for your bookshelf. Customized Access to Content uses these \'qualifiers\' to automatically fill and filter the papers shown on your bookshelf.</string>
</resources>
