<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/newSubscription"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_qualifier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">


        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="33dp"
            android:paddingTop="24dp"
            android:textAlignment="textStart"
            android:paddingBottom="24dp"
            android:paddingStart="32dp"
            android:text="@string/qualifier_desc"
            android:textColor="@color/icons"
            android:textSize="20sp" />


    </android.support.design.widget.AppBarLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5">

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/subscriptionRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/subscription"
                android:textSize="22sp" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5">

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/filterRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/filter"
                android:textSize="22sp" />
        </RelativeLayout>
    </RadioGroup>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">


            <android.support.design.widget.TextInputEditText
                android:id="@+id/searchBox"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:hint="@string/searchTerm"

                android:textAlignment="center"
                android:textSize="30sp" />

        </android.support.design.widget.TextInputLayout>


        <TextView
            android:id="@+id/textDivider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"

            android:text="@string/searchDivider"
            android:textSize="28sp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/textDivider"
            android:layout_centerHorizontal="true"/>


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">


        <TextView
            android:id="@+id/colorChooseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="160dp"
            android:text="@string/pickColor"
            android:textSize="28sp" />


        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/colorChooser"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="32dp"
            android:layout_toEndOf="@id/colorChooseText" />


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">


        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/customDescription"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:hint="@string/customDescription"
                android:padding="4dp"
                android:textSize="30sp" />
        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

</LinearLayout>