<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/newSubscription"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5">

            <android.support.v7.widget.AppCompatRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/subscription"
                android:textSize="22sp" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5">

            <android.support.v7.widget.AppCompatRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/filter"
                android:textSize="22sp" />
        </RelativeLayout>
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorDivider" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:visibility="invisible">

        <EditText
            android:id="@+id/searchBox"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/rectangle"
            android:hint="@string/searchTerm"
            android:padding="4dp"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textDivider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"

            android:text="@string/searchDivider"
            android:textSize="28sp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/textDivider"
            android:layout_centerHorizontal="true"></android.support.v7.widget.AppCompatSpinner>


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorDivider" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:visibility="invisible">

        <TextView
            android:id="@+id/colorChooseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="160dp"
            android:text="@string/pickColor"
            android:textSize="28sp" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/colorChooser"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="32dp"
            android:layout_toEndOf="@id/colorChooseText" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"

        android:background="@color/colorDivider" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:visibility="invisible">


        <EditText
            android:id="@+id/customDescription"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="32dp"
            android:background="@drawable/rectangle"
            android:hint="@string/customDescription"
            android:padding="4dp"
            android:textSize="30sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"

        android:background="@color/colorDivider" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/fabLayout"
            android:text="Ready!"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/fabLayout"
            android:layout_width="wrap_content"
            android:layout_height="76dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:paddingTop="8dp">

            <android.support.design.widget.FloatingActionButton
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:scaleType="center"
                android:src="@drawable/ic_done_white_24px" />
        </LinearLayout>

    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"

        android:background="@color/colorDivider" />


</LinearLayout>